hphp/hack/test/decl/array_typehints.php.typecheck.exp
File "array_typehints.php", line 23, characters 17-32:
Unbound name: `varray_or_darray` (Naming[2049])
File "array_typehints.php", line 23, characters 17-51:
Too many type arguments for this type (Naming[2065])
